--- a/views/create-post-res.ejs
+++ b/views/create-post-res.ejs
@@ -24,11 +24,12 @@
                 <label for="title">Title: <%- formData.title %></label>        
               </div>
               <div class="form-group">
-                <label for="category">Category: <%- formData.category %></label>        
+                <label for="category">Auhtor: <%- formData.author %></label>        
               </div>
               <div class="form-group form-check">        
                 <label class="form-check-label" for="body">Body: <%- formData.body %></label>
               </div>
+              <a href="/posts">See all posts</a>
         </div>
         <!-- JavaScript -->
         <script src="/jquery/jquery.min.js"></script>
