--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -22,13 +22,13 @@
                   <input type="text" class="form-control" name="title" id="title" placeholder="Enter title">      
                 </div>
                 <div class="form-group">
-                  <label for="category">Category</label>
-                  <input type="text" class="form-control" name="category" id="category" placeholder="Eneter category">
+                  <label for="author">Author</label>
+                  <input type="text" class="form-control" name="author" id="author" placeholder="Eneter author">
                 </div>
                 <div class="form-group form-check">
+                    <label for="body">Body</label>
                   <textarea type="text" rows="5" cols="10" class="form-control" id="body" name="body" placeholder="Enter Body of the Post">
-                    </textarea>
-                  <label class="form-check-label" for="body">Body</label>
+                    </textarea>                  
                 </div>
                 <button type="submit" class="btn btn-primary">Send</button>
             </form>
